# email_alert

./: .python-version  README.md  pyproject.toml  requirements.txt
email_alert/: __init__.py  cli.py
