[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "email_alert"
authors = [{name = "Christopher Tyler", email = "ChristopherTyler@engineer.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.11"
dependencies = [
	"click >=8.1",
]

[project.optional-dependencies]
dev = [
	"black >=23.0",
	"coverage >=7.2",
	"mypy >=1.2",
	"pip-chill >=1.0",
	"pre-commit >=3.2",
	"pytest >=7.3",
	"pytest-cov >=4.0",
	"pytest-picked >=0.4",
	"pytest-randomly >=3.12",
	"ruff >=0.0.263",
]

[project.urls]
Home = "https://github.com/cetyler/email_alert"
Documentation = "https://github.com/cetyler/email_alert/wiki"
Source = "https://github.com/cetyler/email_alert"

[project.scripts]
email_alert = "email_alert.cli:main"

[tool.ruff]
target-version = "py311"
select = [
        "B",
        "C",
        "E", # pycodestyle
        "F", # pyflakes
        "W",
        "I001", # isort
]
src = ["email_alert", "tests"]
ignore = [
        "B904",
        "C408",
        "C901",
        "E501",
        "E722",
        "F401",
        "F403",
        "W605",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "I",
        "W",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
]
per-file-ignores = {}

# Same as Blck.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | config
  | data
  | docs
  | logs
  | references
)/
'''

[tool.pytest.ini.options]
minversion = "6.0"
addopts = "--tb=no -v --cov=openweather_report"
markers = "smoke : smoke tests"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "email_alert.__init__",
]
ignore_missing_imports = true
follow_imports = "skip"


